--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-git+https://github.com/cocktailpeanut/TTS#egg=TTS
+fairseq==0.12.2
+faiss_cpu==1.7.4
+gradio==4.7.1
+librosa==0.10.0
+numpy==1.22.0
+praat-parselmouth
+pyworld==0.3.4
+Requests==2.31.0
+scipy==1.11.4
+torch==2.1.0
+torchcrepe==0.0.22
+TTS==0.21.1
